# aqa_test_task

./: .env.example  .gitignore  1.py  Dockerfile  Makefile  README.md  [pytest].ini  auth_system.rar  conftest.py  docker-compose.yml  dockerignore.txt  homework.py  import turtle.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_setup.py  калькулятор.py
Saved Pictures/: app.js  nodejs_task.rar  package.json  test-api.ini
config/: __init__.py  config.py
pages/: __init__.py  base_page.py  main_page.py
tests/: __init__.py  test_main_page_navigation.py
utils/: __init__.py  test_helpers.py
для папки/: nikom_real.html
