[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "effective-mobile-tests"
version = "1.0.0"
description = "Test automation for effective-mobile.ru website"
authors = [{name = "QA Team", email = "qa@company.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/company/effective-mobile-tests"
Repository = "https://github.com/company/effective-mobile-tests.git"
Issues = "https://github.com/company/effective-mobile-tests/issues"

[tool.pytest.ini_options]
addopts = "-v --alluredir=./allure-results --browser=chromium --headed=false --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "smoke: Smoke tests",
    "regression: Regression tests", 
    "navigation: Navigation tests",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
